# Capstone-Project

./: .gitignore  .~lock.encoder_mark_log.csv#  encoder_mark_log.csv  encoder_space_logger.py.py  howtorun.md  mppi_project.md  vehicle_serial_bridge.py
arduino/Wheel_encoder_key_save/: Wheel_encoder_key_save.ino
arduino/encoder/: encoder.ino
arduino/mando_final/: mando_final.ino
arduino/mando_final_ver2/: mando_final_ver2.ino
arduino/remote_encoder_test/: remote_encoder_test.ino
arduino/wheel_encoder_test/: wheel_encoder_test.ino
docs/: 2025.md  mppi_project.md
encoder/: encoder.ino
rviz/: mppi.rviz  raw_ekf_compare.rviz
src/RTK_GPS_NTRIP/ntrip_client/: setup.py
src/bridge_pkg/: setup.py
src/bridge_pkg/bridge_pkg/: serial_bridge.py
src/bridge_pkg/config/: bridge_params.yaml
src/ebimu_pkg/: package.xml  setup.py
src/ebimu_pkg/config/: imu_odometry.rviz  imu_only_params.yaml
src/ebimu_pkg/ebimu_pkg/: ebimu_publisher.py  encoder_imu_odometry.py  encoder_publisher.py  imu_odometry.py
src/ebimu_pkg/launch/: encoder_imu_rviz.launch.py
src/encoder_pkg/: package.xml  setup.py
src/encoder_pkg/config/: encoder_params.yaml
src/encoder_pkg/encoder_pkg/: encoder_publisher.py
src/gnss_pkg/: README.md  u_center_setup.md
src/gnss_pkg/ntrip_client/: setup.py
src/imu_pkg/: package.xml  setup.py
src/odom_pkg/: package.xml  setup.py
src/rviz_pkg/: package.xml  setup.cfg  setup.py
src/rviz_pkg/config/: imu_odometry.rviz
src/rviz_pkg/launch/: encoder_imu_rviz.launch.py
src/utm_pkg/: README.md  howtorun.md  package.xml  setup.cfg  setup.py
src/utm_pkg/config/: utm_params.yaml
src/utm_pkg/launch/: utm_visualization.launch.py
src/utm_pkg/rviz/: utm_visualization.rviz
src/utm_pkg/test/: test_geodesy.py  test_quality.py
src/utm_pkg/utm_pkg/: __init__.py  bag_to_enu_csv.py  dual_gnss_map_node.py  geodesy.py  quality.py
utils/: ls7366r_5m_calibration.py  ls7366r_pulse_measurements.csv
(+24 files in other folders)
