<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_pkg</name>
  <version>0.0.0</version>
  <description>RViz configuration and launch files.</description>
  <maintainer email="e2b@e2box.co.kr">e2box</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>imu_pkg</exec_depend>
  <exec_depend>encoder_pkg</exec_depend>
  <exec_depend>odom_pkg</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
